--- a/cursos/espanol/datascience/E5_ensambles.ipynb
+++ b/cursos/espanol/datascience/E5_ensambles.ipynb
@@ -1,20 +1,50 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4369c0ac-12e6-4d4f-aa02-ae088de27332",
+   "cell_type": "markdown",
+   "id": "f52d4338-222b-4df0-9d52-c2e61f2426c1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Ensambles"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e86633e1-60fd-4bac-9b51-16625136fe9d",
+   "cell_type": "markdown",
+   "id": "d186378a-dfaa-4d6e-a433-4fa4cf6c0868",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "El concepto de ensamble es simple pero muy poderoso. Supongamos que tenemos tres cajas negras las cuales no son muy buenas pero que se equivocan en distintos conjuntos como vemos en la figura:\n",
+    "\n",
+    "<div style=\"text-align:center\">\n",
+    "<img src=\"img/ensamble.png\" width=\"600\"/>\n",
+    "</div>\n",
+    "\n",
+    "Si como clasificador final utilizamos el voto de las tres cajas entonces obtendremos una clasificacion con 100% de efectividad en este caso ya que cuando se equivoque la caja 1 las cajas 2 y 3 acertaran.\n",
+    "\n",
+    "Veamos un ejemplo concreto:\n",
+    "\n",
+    "Supongamos que tenemos:\n",
+    "1. una caja negra que no clasifica bien imagenes de perros pero si de gatos y conejos. \n",
+    "2. una caja negra que no clasifica bien imagenes de gatos pero si de perros y conejos.\n",
+    "3. una caja negra que no clasifica bien imagenes de conejos pero si de perros y gatos.\n",
+    "\n",
+    "Cuando aparezca una imagen nueva de un perro las cajas negras diran:\n",
+    "1. gato\n",
+    "2. perro\n",
+    "3. perro\n",
+    "\n",
+    "Entonces por votacion de las tres cajas el resultado sera perro aunque la primera caja se haya equivocado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45cce3dd-37c5-4fe2-9d23-068b0a9760aa",
+   "metadata": {},
+   "source": [
+    "## Boosting\n",
+    "\n",
+    "El boosting tambien utiliza el concepto de ensamble pero es mas complejo ya que va calculando donde las cajas negras van cometiendo mas errores y utilizan eso para entrenar nuevas cajas negras"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -25,12 +55,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abba0ea2-8520-49f9-8440-335bd9e0911f",
+   "cell_type": "markdown",
+   "id": "3af6ad30-e994-4419-9587-9db1306a724a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html)"
+   ]
   }
  ],
  "metadata": {
