Added programacion advanced material

--- a/cursos/espanol/datascience/E5_ensambles.ipynb
+++ b/cursos/espanol/datascience/E5_ensambles.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "## Boosting\n",
     "\n",
-    "El boosting tambien utiliza el concepto de ensamble pero es mas complejo ya que va calculando donde las cajas negras van cometiendo mas errores y utilizan eso para entrenar nuevas cajas negras"
+    "El boosting tambien utiliza el concepto de ensamble pero es mas complejo ya que va calculando donde las cajas negras van cometiendo mas errores y utiliza eso para entrenar nuevas cajas negras"
    ]
   },
   {
