--- a/cursos/espanol/programacion/A2_tuplas.ipynb
+++ b/cursos/espanol/programacion/A2_tuplas.ipynb
@@ -283,6 +283,78 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df4ca1c2-c575-4e66-8319-3ee8280de8a1",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 3:\n",
+    "\n",
+    "Crear una funcion **obtener_dummies(lista)** que reciba una lista cuyos elementos son solamente las strings \"hombre\" o \"mujer\" y devuelva dos listas:\n",
+    "- una que contenga unos en las posiciones que dice hombre y ceros en las demas \n",
+    "- una que contenga unos en las posiciones que dice mujer y ceros en las demas. \n",
+    "\n",
+    "El resultado devuelto debe ser una tupla que contenga ambas listas.\n",
+    "\n",
+    "*Ejemplo:*\n",
+    "\n",
+    "*Input: lista=[\"hombre\", \"mujer\", \"mujer\", \"hombre\", \"mujer\"]* \n",
+    "\n",
+    "*Output: ([1,0,0,1,0],[0,1,1,0,1])*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b4e756d-c163-4c53-a3ca-2497d1efa019",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def obtener_dummies(lista):\n",
+    "    # Escribir aqui la solucion\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ee1b10b-4773-4b8f-ad75-c5f19973d54c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No modificar el siguiente codigo\n",
+    "# Solo ejecutarlo para saber si la funcion creada pasa todos los testsh, m = obtener_dummies([\"hombre\", \"mujer\", \"mujer\", \"hombre\", \"mujer\"])\n",
+    "assert h == [1,0,0,1,0] and m == [0,1,1,0,1], \"Error en el test 1\"\n",
+    "h, m = obtener_dummies([\"mujer\", \"mujer\", \"mujer\", \"mujer\"])\n",
+    "assert h == [0,0,0,0] and m == [1,1,1,1], \"Error en el test 2\"\n",
+    "h, m = obtener_dummies([\"mujer\", \"mujer\", \"hombre\", \"mujer\"])\n",
+    "assert h == [0,0,1,0] and m == [1,1,0,1], \"Error en el test 3\"\n",
+    "\"Felicitaciones todos los casos de prueba fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78b701ce-2287-42d8-82eb-df2196ee4e10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 3 {display-mode:\"form\"}\n",
+    "\n",
+    "def obtener_dummies(lista):\n",
+    "    lista_h = []\n",
+    "    lista_m = []\n",
+    "    for item in lista:\n",
+    "    if item == \"hombre\":\n",
+    "        lista_h.append(1)\n",
+    "        lista_m.append(0)\n",
+    "    else:\n",
+    "        lista_h.append(0)\n",
+    "        lista_m.append(1)\n",
+    "    return (lista_h, lista_m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d5f7c4b8-5f2e-4e8d-b7c3-4b80328eb135",
    "metadata": {},
    "source": [
