--- a/cursos/espanol/programacion/E3_fstrings.ipynb
+++ b/cursos/espanol/programacion/E3_fstrings.ipynb
@@ -12,23 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3d92f8c2-b590-4344-b058-7c1f193bdba5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alicia tiene 29 años\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "name = 'Alicia'\n",
-    "age = 29\n",
+    "nombre = 'Alicia'\n",
+    "edad = 29\n",
     "\n",
-    "a = f'{name} tiene {age} años'\n",
+    "a = f'{nombre} tiene {edad} años'\n",
     "print(a)"
    ]
   },
@@ -42,32 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "31184b5b-8ad0-4fcf-8063-078f1ad47274",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nombre: Alicia\n",
-      "Edad: 29\n",
-      "Ocupacion: Cientifica de datos\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "name = 'Alicia'\n",
-    "age = 29\n",
-    "occupation = 'Cientifica de datos'\n",
+    "nombre = 'Alicia'\n",
+    "edad = 29\n",
+    "ocupacion = 'Cientifica de datos'\n",
     "\n",
-    "msg = (\n",
-    "    f'Nombre: {name}\\n'\n",
-    "    f'Edad: {age}\\n'\n",
-    "    f'Ocupacion: {occupation}'\n",
+    "texto = (\n",
+    "    f'Nombre: {nombre}\\n'\n",
+    "    f'Edad: {edad}\\n'\n",
+    "    f'Ocupacion: {ocupacion}'\n",
     ")\n",
     "\n",
-    "print(msg)"
+    "print(texto)"
    ]
   },
   {
@@ -82,19 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fcc0d612-1acb-46cb-a2a3-30856e87925f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python usa { } para evaluar variables en f-strings\n",
-      "Esto es 'genial'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'Python usa {{ }} para evaluar variables en f-strings')\n",
     "print(f'Esto es \\'genial\\'')"
@@ -105,73 +78,47 @@
    "id": "c37aac53-f5db-405b-b054-f019e1a9e9dd",
    "metadata": {},
    "source": [
-    "## Numeros enteros y float"
+    "## Numeros enteros y float\n",
+    "\n",
+    "A continuacion ejemplos de como darle formato especial a los numeros:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "85b063bf-54cc-424e-aaf4-ff9f19af94ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       4.8\n",
-      "004.8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val = 4.8\n",
-    "print(f'{val:10}')\n",
-    "print(f'{val:05}')"
+    "valor1 = 4.8\n",
+    "print(f'{valor1:10}')\n",
+    "print(f'{valor1:05}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "cf3609fa-85a1-4149-8c66-a5198a01f01f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "00100\n",
-      "4.8**\n",
-      "..4.8\n",
-      ".4.8.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val2 = 100\n",
-    "print(f'{val2:05}')\n",
-    "print(f'{val:*<5}')\n",
-    "print(f'{val:.>5}')\n",
-    "print(f'{val:.^5}')"
+    "valor2 = 100\n",
+    "print(f'{valor2:05}')\n",
+    "print(f'{valor1:*<5}')\n",
+    "print(f'{valor1:.>5}')\n",
+    "print(f'{valor1:.^5}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ee6036bb-067d-4d68-b69e-8a663862e046",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Capitulo del libro................6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val1 = \"Capitulo del libro\"\n",
-    "val2 = 6\n",
-    "print(f'{val1:.<30}{val2:.>5}')"
+    "valor3 = \"Capitulo del libro\"\n",
+    "valor4 = 6\n",
+    "print(f'{valor3:.<30}{valor4:.>5}')"
    ]
   },
   {
@@ -179,34 +126,26 @@
    "id": "d763f582-6217-431c-a648-2781c856c339",
    "metadata": {},
    "source": [
-    "## Numeros con decimales (float)"
+    "## Numeros con decimales (float)\n",
+    "\n",
+    "Como formatear numeros con decimales con la formula: \n",
+    "\n",
+    "**f'{valor:{ancho}.{precision}}'**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "99d70a89-2bc2-4d83-aeb7-b01ebcab870f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.14285714285714285\n",
-      "0.14\n",
-      "              14.29%\n",
-      "                0.14%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val = 1/7\n",
+    "valor5 = 1/7\n",
     "\n",
-    "#f'{value:{width}.{precision}}'\n",
-    "print(f'{val}')\n",
-    "print(f'{val:.2}')\n",
-    "print(f'{val:20.2%}')\n",
-    "print(f'{val:20.2}%')"
+    "print(f'{valor5}')\n",
+    "print(f'{valor5:.2}')\n",
+    "print(f'{valor5:20.2%}')\n",
+    "print(f'{valor5:20.2}%')"
    ]
   },
   {
@@ -214,39 +153,28 @@
    "id": "32add1ed-9ee5-4746-be51-d475d5d8545c",
    "metadata": {},
    "source": [
-    "## Fecha y hora"
+    "## Fecha y hora\n",
+    "\n",
+    "Como darle formato a variables de tipo datetime (fecha y hora)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "213dbf7f-0355-49a5-af97-122bbc8d9cdc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-07-25 10:22\n",
-      "Tuesday\n",
-      "Tue\n",
-      "July\n",
-      "206\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datetime\n",
     "\n",
-    "now = datetime.datetime.now()\n",
+    "ahora = datetime.datetime.now()\n",
     "\n",
-    "print(f'{now:%Y-%m-%d %H:%M}')\n",
-    "print(f'{now:%A}')\n",
-    "print(f'{now:%a}')\n",
-    "print(f'{now:%B}')\n",
-    "print(f'{now:%j}')\n",
-    "print(f'{now:%w}')"
+    "print(f'{ahora:%Y-%m-%d %H:%M}')\n",
+    "print(f'{ahora:%A}')\n",
+    "print(f'{ahora:%a}')\n",
+    "print(f'{ahora:%B}')\n",
+    "print(f'{ahora:%j}')\n",
+    "print(f'{ahora:%w}')"
    ]
   },
   {
@@ -254,40 +182,30 @@
    "id": "c35e6b83-fb0b-477d-a15f-c9bea5fce42f",
    "metadata": {},
    "source": [
-    "## Tipos de notacion numerica"
+    "## Tipos de notacion numerica\n",
+    "\n",
+    "Como mostrar un numero en notaciones de diferentes bases:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4ddd039e-8492-46ec-a51e-53d8b9423ca6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "10\n",
-      "20\n",
-      "10000\n",
-      "1.600000e+01\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val = 16\n",
+    "valor6 = 16\n",
     "\n",
     "# hexadecimal en minusculas\n",
-    "print(f'{val:x}')\n",
+    "print(f'{valor6:x}')\n",
     "# hexadecimal en mayusculas\n",
-    "print(f'{val:X}')\n",
+    "print(f'{valor6:X}')\n",
     "# octal\n",
-    "print(f'{val:o}')\n",
+    "print(f'{valor6:o}')\n",
     "# binaria\n",
-    "print(f'{val:b}')\n",
+    "print(f'{valor6:b}')\n",
     "# cientifica\n",
-    "print(f'{val:e}')"
+    "print(f'{valor6:e}')"
    ]
   },
   {
