--- a/cursos/espanol/programacion/E4_list_comprehension.ipynb
+++ b/cursos/espanol/programacion/E4_list_comprehension.ipynb
@@ -101,6 +101,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6ce00bd1-2438-4dfa-82a0-69f19976a6b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b09d14b5-58b2-4d08-9251-e90825aa04eb",
    "metadata": {
     "id": "oKqKr--x83lE",
@@ -119,6 +131,8 @@
     }
    ],
    "source": [
+    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
+    "\n",
     "a = [1,2,3,4,5,6,7,8,9,10]\n",
     "[x*3 for x in a]"
    ]
@@ -142,6 +156,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "84cc87d0-f31b-474f-9373-ee87ce1aee17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "f8b2dac9-a701-4164-acbe-e30a2e7477d5",
    "metadata": {
     "id": "VD2MC_fP9QZa",
@@ -154,12 +180,14 @@
        "[2, 4, 6, 8, 10]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#@title Solucion Ejercicio 2 {display-mode:\"form\"}\n",
+    "\n",
     "a = [1,2,3,4,5,6,7,8,9,10]\n",
     "[x for x in a if x%2==0]"
    ]
@@ -183,6 +211,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "583beae0-13a7-40c0-b8c1-eeb6a82a3592",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4d1adf6f-6eaf-48a6-8053-26d390661f0b",
    "metadata": {
     "id": "XLxceTsf-Cz8",
@@ -201,6 +241,8 @@
     }
    ],
    "source": [
+    "#@title Solucion Ejercicio 3 {display-mode:\"form\"}\n",
+    "\n",
     "a = [1,2,3,4,5,6,7,8,9,10]\n",
     "[x**2 for x in a if x%2!=0]"
    ]
@@ -224,6 +266,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f95184fc-0a73-4bc6-878d-4cee9e2ff400",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7f7a33f8-e7c9-4a71-a90a-4b6f9de41ce5",
    "metadata": {
     "id": "ORjBahdGrB9X",
@@ -242,6 +296,8 @@
     }
    ],
    "source": [
+    "#@title Solucion Ejercicio 4 {display-mode:\"form\"}\n",
+    "\n",
     "a = [1,2,3,4,5,6,7,8,9,10]\n",
     "[x**2 if x%2 == 0 else x** 3 for x in a]"
    ]
@@ -265,6 +321,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "95d94030-1347-47ae-9232-9d0f56f0addc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8753383c-3077-4dab-beed-a9c4a1e17601",
    "metadata": {
     "id": "Rv75TVYgrB9Y",
@@ -283,6 +351,8 @@
     }
    ],
    "source": [
+    "#@title Solucion Ejercicio 5 {display-mode:\"form\"}\n",
+    "\n",
     "a = [\"Panda\",\"Pasa\",\"Papa\",\"Pollo\",\"Pera\",\"Pan\",\"P\"]\n",
     "[x[:4] if len(x) > 4 else (x + \"XXXX\")[:4] if len(x) < 4 else x for x in a]"
    ]
@@ -301,6 +371,18 @@
     "Usar List Comprehension para crear una nueva lista que contenga los strings de la segunda lista repetidos tantas veces como indican los numeros de la primera lista\n",
     "\n",
     "Resultado esperado: ['XX', 'A', 'ZZZZZ', '000000', '111', 'pppp']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24453de1-a588-465b-b4c2-26afb7548c8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -327,6 +409,8 @@
     }
    ],
    "source": [
+    "#@title Solucion Ejercicio 6 {display-mode:\"form\"}\n",
+    "\n",
     "a,b = [2,1,5,6,3,4] , [\"X\",\"A\",\"Z\",\"0\",\"1\",\"p\"]\n",
     "[x*y for x,y in zip(b,a)]"
    ]
@@ -359,6 +443,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a444dd77-1651-4775-92fb-0634c908747b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribir aqui la solucion\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "eb5b0aa7-c058-414c-b750-6ce10b829ad7",
    "metadata": {
     "id": "E4aXJpe_rB9Z",
@@ -385,56 +481,19 @@
     }
    ],
    "source": [
+    "#@title Solucion Ejercicio 7 {display-mode:\"form\"}\n",
+    "\n",
     "j1, j2 = [\"Piedra\", \"Papel\", \"Tijera\"], [\"Piedra\", \"Papel\", \"Tijera\"]\n",
     "[(x+\"-\"+y).upper() for x in j1 for y in j2]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dac31a36-478f-4566-a586-215ff1e9554d",
+   "cell_type": "markdown",
+   "id": "48f1ede6-4c10-429a-9dbe-59623c999b95",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "ff0cf6dc-227c-458d-b8d8-9e11580ee6ae",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "f = lambda lista: [x+10 for x in lista]"
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "2b12c502-5c55-458a-801b-a01a3dda5c41",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[11, 12, 13, 14, 15, 16]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f([1,2,3,4,5,6])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaf3643d-d264-4adb-8015-496293e810fb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
